--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     "extra": {
         "shopware-plugin-class": "Torq\\Shopware\\CustomPricing",
         "label": {
-            "de-DE": "",
-            "en-GB": ""
+            "de-DE": "Custom Pricing",
+            "en-GB": "Custom Pricing"
         }
     },
     "autoload": {
