--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,11 @@
     "name": "torq/custompricing",
     "description": "torq/custompricing",
     "type": "shopware-platform-plugin",
-    "version": "1.1.0",
+    "version": "1.1.1",
     "license": "MIT",
     "require": {
         "shopware/core": "^6.6.0",
-        "torq/shopwarecommon": "^2.0.0"
+        "torq/shopwarecommon": ">=2.0.0,<4.0.0"
     },
     "extra": {
         "shopware-plugin-class": "Torq\\Shopware\\CustomPricing\\TorqCustomPricing",
